--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "pg": "^8.6.0",
     "qrcode": "^1.4.4",
     "socket.io": "2.3.0",
-    "whatsapp-web.js": "^1.12.5"
+    "whatsapp-web.js": "latest"
   },
   "engines": {
-    "node": "v12.10.0"
+    "node": "v14.15.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
